# before-you-sign

./: .gitignore  LICENSE  README.md  pyproject.toml
src/before_you_sign/: app.py  config.py  delete_cache.py
src/before_you_sign/inputs/: all.py  exceptions.py  markitdown.py  pandoc.py
src/before_you_sign/llm/: __init__.py  api.py
src/before_you_sign/llm/gemini/: Readme.md  __init__.py  assistant.py  prompts.py
tests/data/: Readme.md  Wikimedia Bad Terms of Use.docx  Wikimedia Terms of Use.docx  YourDiary Bad ToS.docx  YourDiary ToS.docx
